# rust_use_tools

./: Cargo.toml  README.md  app.yml  data.sqlite3
.cargo-bak/: config
app/directory/dir_tools/: Cargo.toml  README.md
app/directory/dir_tools/src/: main.rs
app/encryption/md5_tools/: Cargo.toml
app/encryption/md5_tools/src/: main.rs
app/encryption/uuid_tools/: Cargo.toml
app/encryption/uuid_tools/src/: main.rs
app/file/csv/: Cargo.toml  README.md  demo1.csv
app/file/csv/src/: main.rs  read.rs  wtite.rs
app/file/excel/: Cargo.toml  README.md
app/file/excel/src/: main.rs
app/file/file_path/: Cargo.toml  README.md
app/file/file_path/src/: main.rs
app/file/use_yaml/: Cargo.toml  README.md
app/file/use_yaml/src/: main.rs
app/http/use_reqwest/: Cargo.toml  README.md
app/logs/use_log4rs/: Cargo.toml  README.md
app/logs/use_log4rs/src/: main.rs
app/logs/use_tracing/: Cargo.toml  README.md
app/logs/use_tracing/src/: lib.rs
app/logs/use_tracing/src/tracing_logger/: mod.rs
app/orm/app_sqlx_sqlite/: Cargo.toml  README.md  log4rs.yaml  watch.sh
app/orm/app_sqlx_sqlite/src/: config.rs  db.rs  main.rs
app/orm/app_sqlx_sqlite/src/dao/: mod.rs  user.rs
app/orm/sqlx/: Cargo.toml  README.md
app/orm/sqlx/src/: main.rs
app/utils/env/: .env  Cargo.toml
app/utils/env/src/: main.rs
app/utils/open_file_link/: Cargo.toml  README.md
app/utils/open_file_link/src/: main.rs
app/utils/time/: Cargo.toml  README.md
app/utils/time/src/: main.rs
app/utils/use_email/: Cargo.toml
app/utils/use_email/src/: main.rs
app/utils/use_email/src/email/: mod.rs  xemail.rs
app/utils/use_embed_resource/: Cargo.toml  README.md  build.rs
app/utils/use_once_cell/: Cargo.toml
app/utils/use_serde_json/: Cargo.toml  README.md
app/utils/use_serde_json/src/: main.rs
app/utils/watch_project/: Cargo.toml  README.md
app/utils/webbrowser/: Cargo.toml  README.md
app/utils/webbrowser/src/: main.rs
app_rocket/: .gitignore  Cargo.toml  app.yml  data.sqlite3  data.sqlite3-shm  data.sqlite3-wal  log4rs.yaml
app_rocket/src/: main.rs
app_rocket/src/config/: config.rs  mod.rs
app_rocket/src/dao/: dao.rs  mod.rs  user.rs
app_sqlx_sqlite/: Cargo.toml  data.sqlite3
app_sqlx_sqlite/src/: config.rs  main.rs
app_sqlx_sqlite/src/dao/: dao.rs
app_tools/: Cargo.toml  build.rs  log4rs.yaml
app_tools/assets/: icon.rc
app_tools/examples/log4rs_demo/: log4rs.yaml
app_tools/src/: lib.rs
app_tools/src/config/: config.rs  mod.rs
app_tools/src/email/: email.rs
app_tools/src/excel/: excel.rs  mod.rs
app_tools/src/tracing_logger/: mod.rs
docs/: cargo用法收集.md  vscode环境搭建.md
examples/: log.rs
examples/log4rs_demo/: README.md  log4rs.rs
src/: lib.rs  main.rs
src/config/: config.rs
src/email/: email.rs  mod.rs
src/tracing_logger/: logger.rs
