[package]
name = "seasnft7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
once_cell = "1.10.0"
serde_yaml = "0.8.23"
schemars = "0.8.8"
lettre = "0.9.6"
lettre_email = "0.9.4"
