[package]
name = "seasnft7"
homepage = ""
repository = ""
keywords = []
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
schemars = "0.8.8"
once_cell = "1.10.0"
lettre = "0.9.6"
lettre_email = "0.9.4"
log = "0.4.16"
log4rs = "1.0.0"    # log4rs for log
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
webbrowser = "0.6.0"
opener = "0.5.0"
reqwest = { version = "0.11.10", features = ["blocking","json"] }
tokio = { version = "1.17.0", features = ["full"] }
csv = "1.1.6"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
umya-spreadsheet = "0.7"
