[package]
name = "sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-native-tls",
    "chrono",
    "mysql",
    "sqlite",
    "macros",
] }
tokio = { version = "1.35", features = ["full"] }
